Harden API for production release
